deploy/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: daprdemo-portal-ingress
  # annotations:
  #     kubernetes.io/ingress.class: nginx
  #     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: daprdemo-portal
            port: 
              number: 8080
      - path: /helloapi
        pathType: Prefix
        backend:
          service:
            name: daprdemo-helloapi
            port: 
              number: 8080
